--- a/Apostila Micro/placas/kit placa FAB_PIC/bootloader2 MikroC/Settings.ini
+++ b/Apostila Micro/placas/kit placa FAB_PIC/bootloader2 MikroC/Settings.ini
@@ -6,9 +6,11 @@ PixelsPerInch=96
 MinMaxPos(1280x720)=-1,-1,-1,-1
 MinMaxPos=-1,-1,-1,-1
 NormPos(1280x720)=375,0,864,386
-NormPos=375,0,864,386
+NormPos=783,142,1272,528
 CheckBoxClose_Checked=FALSE
 OpenDialog1_InitialDir=
-OpenDialog1_FileName=C:\Users\IFMaker\Desktop\temp\vitoria.hex
-MCUComboBox_ItemIndex=-1
+OpenDialog1_FileName=C:\Users\Fabio T. Brito\Desktop\teste\samuel\MyProject.hex
+MCUComboBox_ItemIndex=0
+MinMaxPos(1366x768)=-1,-1,-1,-1
+NormPos(1366x768)=783,142,1272,528
 
