--- a/Apostila Micro/placas/kit placa FAB_PIC/bootloader2 MikroC/Settings.ini
+++ b/Apostila Micro/placas/kit placa FAB_PIC/bootloader2 MikroC/Settings.ini
@@ -6,11 +6,13 @@ PixelsPerInch=96
 MinMaxPos(1280x720)=-1,-1,-1,-1
 MinMaxPos=-1,-1,-1,-1
 NormPos(1280x720)=375,0,864,386
-NormPos=521,112,1010,498
+NormPos=375,342,864,728
 CheckBoxClose_Checked=FALSE
 OpenDialog1_InitialDir=
-OpenDialog1_FileName=C:\Users\Fabio T. Brito\Desktop\teste\samuel\serial.hex
-MCUComboBox_ItemIndex=-1
+OpenDialog1_FileName=C:\Users\LINC\Dropbox\IFCE\github\programas oficiais\Apostila Micro\placas\kit placa FAB_PIC\fab_io\firmware_fabpic1_2.hex
+MCUComboBox_ItemIndex=0
 MinMaxPos(1366x768)=-1,-1,-1,-1
 NormPos(1366x768)=521,112,1010,498
+MinMaxPos(1920x1080)=-1,-1,-1,-1
+NormPos(1920x1080)=375,342,864,728
 
